--- a/src/Kooco.Pikachu.Blazor/Pages/DiscountCodes/DiscountCode.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/DiscountCodes/DiscountCode.razor
@@ -129,6 +129,18 @@
                     </DisplayTemplate>
                 </DataGridEntityActionsColumn>
             </DataGridColumns>
+            <NextPageButtonTemplate>@L["NextPage"]</NextPageButtonTemplate>
+            <PreviousPageButtonTemplate>@L["PrevPage"]</PreviousPageButtonTemplate>
+            <LastPageButtonTemplate>@L["LastPage"]</LastPageButtonTemplate>
+            <FirstPageButtonTemplate>@L["FirstPage"]</FirstPageButtonTemplate>
+            <TotalItemsTemplate>
+                @(string.Format(
+                    L["Range"],
+                    ((CurrentPage - 1) * PageSize) + 1,
+                    (CurrentPage * PageSize > TotalCount ? TotalCount : CurrentPage * PageSize),
+                    TotalCount
+                    ))
+            </TotalItemsTemplate>
         </DataGrid>
     </CardBody>
 </Card>
