--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/GroupBuyExternalReportDetails.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/GroupBuyExternalReportDetails.razor
@@ -220,6 +220,18 @@
                                 </div>
                             }
                         </DetailRowTemplate>
+                         <NextPageButtonTemplate>@L["NextPage"]</NextPageButtonTemplate>
+    <PreviousPageButtonTemplate>@L["PrevPage"]</PreviousPageButtonTemplate>
+    <LastPageButtonTemplate>@L["LastPage"]</LastPageButtonTemplate>
+    <FirstPageButtonTemplate>@L["FirstPage"]</FirstPageButtonTemplate>
+            <TotalItemsTemplate>
+                @(string.Format(
+                         L["Range"],
+                         ((PageIndex - 1) * PageSize) + 1,
+                         (PageIndex * PageSize > TotalCount ? TotalCount : PageIndex * PageSize),
+                         TotalCount
+                         ))
+            </TotalItemsTemplate>
                     </DataGrid>
                 </CardBody>
             </Card>
