--- a/src/Kooco.Pikachu.Blazor/Pages/ProductCategories/ProductCategories.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ProductCategories/ProductCategories.razor
@@ -224,6 +224,18 @@
         </DataGrid>
         
     </DetailRowTemplate>
+     <NextPageButtonTemplate>@L["NextPage"]</NextPageButtonTemplate>
+    <PreviousPageButtonTemplate>@L["PrevPage"]</PreviousPageButtonTemplate>
+    <LastPageButtonTemplate>@L["LastPage"]</LastPageButtonTemplate>
+    <FirstPageButtonTemplate>@L["FirstPage"]</FirstPageButtonTemplate>
+            <TotalItemsTemplate>
+                @(string.Format(
+                         L["Range"],
+                         ((CurrentPage - 1) * PageSize) + 1,
+                         (CurrentPage * PageSize > TotalCount ? TotalCount : CurrentPage * PageSize),
+                         TotalCount
+                         ))
+            </TotalItemsTemplate>
         </DataGrid>
     </CardBody>
 </Card>
