--- a/src/Kooco.Pikachu.Blazor/Pages/TenantManagement/TenantWallets/TenantWalletList.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/TenantManagement/TenantWallets/TenantWalletList.razor
@@ -45,6 +45,18 @@
                                 Caption="@L["CreationTime"]">
                 </DataGridColumn>
             </DataGridColumns>
+            <NextPageButtonTemplate>@L["NextPage"]</NextPageButtonTemplate>
+            <PreviousPageButtonTemplate>@L["PrevPage"]</PreviousPageButtonTemplate>
+            <LastPageButtonTemplate>@L["LastPage"]</LastPageButtonTemplate>
+            <FirstPageButtonTemplate>@L["FirstPage"]</FirstPageButtonTemplate>
+            <TotalItemsTemplate>
+                @(string.Format(
+                    L["Range"],
+                    ((CurrentPage - 1) * PageSize) + 1,
+                    (CurrentPage * PageSize > TotalCount ? TotalCount : CurrentPage * PageSize),
+                    TotalCount
+                    ))
+            </TotalItemsTemplate>
         </DataGrid>
     </CardBody>
 </Card>
