--- a/src/Kooco.Pikachu.Blazor/Pages/TenantManagement/TenantWallets/WalletDetailsRecord.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/TenantManagement/TenantWallets/WalletDetailsRecord.razor
@@ -34,9 +34,9 @@
           @bind-SelectedRows="@SelectedTransactions"
           SelectionMode="DataGridSelectionMode.Multiple"
           Responsive="true">
-
-    <DataGridMultiSelectColumn TItem="TenantWalletTransactionDto" Width="30px"></DataGridMultiSelectColumn>
-
+          <DataGridColumns>
+              <DataGridMultiSelectColumn TItem="TenantWalletTransactionDto" Width="30px"></DataGridMultiSelectColumn>
+   
     <DataGridColumn Field="@nameof(TenantWalletTransactionDto.Timestamp)" Caption="@L["Timestamp"]">
         <DisplayTemplate>@context.Timestamp.ToString("M/d/yyyy h:mm tt")</DisplayTemplate>
     </DataGridColumn>
@@ -81,6 +81,19 @@
             @SplitNotesWithRegex(context.Note)
         </DisplayTemplate>
     </DataGridColumn>
+    </DataGridColumns>
+    <NextPageButtonTemplate>@L["NextPage"]</NextPageButtonTemplate>
+    <PreviousPageButtonTemplate>@L["PrevPage"]</PreviousPageButtonTemplate>
+    <LastPageButtonTemplate>@L["LastPage"]</LastPageButtonTemplate>
+    <FirstPageButtonTemplate>@L["FirstPage"]</FirstPageButtonTemplate>
+    <TotalItemsTemplate>
+        @(string.Format(
+            L["Range"],
+            ((CurrentPage - 1) * PageSize) + 1,
+            (CurrentPage * PageSize > TotalCount ? TotalCount : CurrentPage * PageSize),
+            TotalCount
+            ))
+    </TotalItemsTemplate>
 </DataGrid>
 
 @code {
