--- a/src/Kooco.Pikachu.Blazor/Pages/Dashboard/Dashboard.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Dashboard/Dashboard.razor
@@ -153,6 +153,14 @@
                         <PreviousPageButtonTemplate>@L[PikachuResource.PrevPage]</PreviousPageButtonTemplate>
                         <NextPageButtonTemplate>@L[PikachuResource.NextPage]</NextPageButtonTemplate>
                         <LastPageButtonTemplate>@L[PikachuResource.LastPage]</LastPageButtonTemplate>
+                        <TotalItemsTemplate>
+                            @(string.Format(
+                                L["Range"],
+                                ((CurrentPage - 1) * PageSize) + 1,
+                                (CurrentPage * PageSize > RecentOrdersCount ? RecentOrdersCount : CurrentPage * PageSize),
+                                RecentOrdersCount
+                                ))
+                        </TotalItemsTemplate>
                     </DataGrid>
                 }
             </CardBody>
