--- a/src/Kooco.Pikachu.Blazor/Pages/Orders/Order.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Orders/Order.razor
@@ -661,6 +661,14 @@
                             <PreviousPageButtonTemplate>@L[PikachuResource.PrevPage]</PreviousPageButtonTemplate>
                             <NextPageButtonTemplate>@L[PikachuResource.NextPage]</NextPageButtonTemplate>
                             <LastPageButtonTemplate>@L[PikachuResource.LastPage]</LastPageButtonTemplate>
+  <TotalItemsTemplate>
+                @(string.Format(
+                         L["Range"],
+                         ((PageIndex - 1) * PageSize) + 1,
+                         (PageIndex * PageSize > TotalCount ? TotalCount : PageIndex * PageSize),
+                         TotalCount
+                         ))
+            </TotalItemsTemplate>
                         </DataGrid>
                         </div>
                          <!-- Draggable Resizer -->
@@ -904,6 +912,14 @@
                             <PreviousPageButtonTemplate>@L[PikachuResource.PrevPage]</PreviousPageButtonTemplate>
                             <NextPageButtonTemplate>@L[PikachuResource.NextPage]</NextPageButtonTemplate>
                             <LastPageButtonTemplate>@L[PikachuResource.LastPage]</LastPageButtonTemplate>
+                              <TotalItemsTemplate>
+                @(string.Format(
+                         L["Range"],
+                         ((PageIndex - 1) * PageSize) + 1,
+                         (PageIndex * PageSize > TotalCount ? TotalCount : PageIndex * PageSize),
+                         TotalCount
+                         ))
+            </TotalItemsTemplate>
                         </DataGrid>
                           </div>
                             <!-- Draggable Resizer -->
@@ -1150,6 +1166,14 @@
                             <PreviousPageButtonTemplate>@L[PikachuResource.PrevPage]</PreviousPageButtonTemplate>
                             <NextPageButtonTemplate>@L[PikachuResource.NextPage]</NextPageButtonTemplate>
                             <LastPageButtonTemplate>@L[PikachuResource.LastPage]</LastPageButtonTemplate>
+                              <TotalItemsTemplate>
+                @(string.Format(
+                         L["Range"],
+                         ((PageIndex - 1) * PageSize) + 1,
+                         (PageIndex * PageSize > TotalCount ? TotalCount : PageIndex * PageSize),
+                         TotalCount
+                         ))
+            </TotalItemsTemplate>
                         </DataGrid>
                           </div>
   <!-- Draggable Resizer -->
@@ -1458,6 +1482,14 @@
                             <PreviousPageButtonTemplate>@L[PikachuResource.PrevPage]</PreviousPageButtonTemplate>
                             <NextPageButtonTemplate>@L[PikachuResource.NextPage]</NextPageButtonTemplate>
                             <LastPageButtonTemplate>@L[PikachuResource.LastPage]</LastPageButtonTemplate>
+                              <TotalItemsTemplate>
+                @(string.Format(
+                         L["Range"],
+                         ((PageIndex - 1) * PageSize) + 1,
+                         (PageIndex * PageSize > TotalCount ? TotalCount : PageIndex * PageSize),
+                         TotalCount
+                         ))
+            </TotalItemsTemplate>
                         </DataGrid>
                           </div>
                             <!-- Draggable Resizer -->
@@ -1760,6 +1792,14 @@
                             <PreviousPageButtonTemplate>@L[PikachuResource.PrevPage]</PreviousPageButtonTemplate>
                             <NextPageButtonTemplate>@L[PikachuResource.NextPage]</NextPageButtonTemplate>
                             <LastPageButtonTemplate>@L[PikachuResource.LastPage]</LastPageButtonTemplate>
+                              <TotalItemsTemplate>
+                @(string.Format(
+                         L["Range"],
+                         ((PageIndex - 1) * PageSize) + 1,
+                         (PageIndex * PageSize > TotalCount ? TotalCount : PageIndex * PageSize),
+                         TotalCount
+                         ))
+            </TotalItemsTemplate>
                         </DataGrid>
                          </div>
                            <!-- Draggable Resizer -->
@@ -2062,6 +2102,14 @@
                             <PreviousPageButtonTemplate>@L[PikachuResource.PrevPage]</PreviousPageButtonTemplate>
                             <NextPageButtonTemplate>@L[PikachuResource.NextPage]</NextPageButtonTemplate>
                             <LastPageButtonTemplate>@L[PikachuResource.LastPage]</LastPageButtonTemplate>
+                              <TotalItemsTemplate>
+                @(string.Format(
+                         L["Range"],
+                         ((PageIndex - 1) * PageSize) + 1,
+                         (PageIndex * PageSize > TotalCount ? TotalCount : PageIndex * PageSize),
+                         TotalCount
+                         ))
+            </TotalItemsTemplate>
                         </DataGrid>
                         </div>
                           <!-- Draggable Resizer -->
@@ -2362,6 +2410,14 @@
                             <PreviousPageButtonTemplate>@L[PikachuResource.PrevPage]</PreviousPageButtonTemplate>
                             <NextPageButtonTemplate>@L[PikachuResource.NextPage]</NextPageButtonTemplate>
                             <LastPageButtonTemplate>@L[PikachuResource.LastPage]</LastPageButtonTemplate>
+                              <TotalItemsTemplate>
+                @(string.Format(
+                         L["Range"],
+                         ((PageIndex - 1) * PageSize) + 1,
+                         (PageIndex * PageSize > TotalCount ? TotalCount : PageIndex * PageSize),
+                         TotalCount
+                         ))
+            </TotalItemsTemplate>
                         </DataGrid>
                           </div>
                             <!-- Draggable Resizer -->
@@ -2594,6 +2650,14 @@
                             <PreviousPageButtonTemplate>@L[PikachuResource.PrevPage]</PreviousPageButtonTemplate>
                             <NextPageButtonTemplate>@L[PikachuResource.NextPage]</NextPageButtonTemplate>
                             <LastPageButtonTemplate>@L[PikachuResource.LastPage]</LastPageButtonTemplate>
+                              <TotalItemsTemplate>
+                @(string.Format(
+                         L["Range"],
+                         ((PageIndex - 1) * PageSize) + 1,
+                         (PageIndex * PageSize > TotalCount ? TotalCount : PageIndex * PageSize),
+                         TotalCount
+                         ))
+            </TotalItemsTemplate>
                         </DataGrid>
                           </div>
                             <!-- Draggable Resizer -->
@@ -2838,6 +2902,14 @@
                             <PreviousPageButtonTemplate>@L[PikachuResource.PrevPage]</PreviousPageButtonTemplate>
                             <NextPageButtonTemplate>@L[PikachuResource.NextPage]</NextPageButtonTemplate>
                             <LastPageButtonTemplate>@L[PikachuResource.LastPage]</LastPageButtonTemplate>
+                              <TotalItemsTemplate>
+                @(string.Format(
+                         L["Range"],
+                         ((PageIndex - 1) * PageSize) + 1,
+                         (PageIndex * PageSize > TotalCount ? TotalCount : PageIndex * PageSize),
+                         TotalCount
+                         ))
+            </TotalItemsTemplate>
                         </DataGrid>
                                             </div>
                                               <!-- Draggable Resizer -->
@@ -3152,6 +3224,14 @@
                             <PreviousPageButtonTemplate>@L[PikachuResource.PrevPage]</PreviousPageButtonTemplate>
                             <NextPageButtonTemplate>@L[PikachuResource.NextPage]</NextPageButtonTemplate>
                             <LastPageButtonTemplate>@L[PikachuResource.LastPage]</LastPageButtonTemplate>
+                              <TotalItemsTemplate>
+                @(string.Format(
+                         L["Range"],
+                         ((PageIndex - 1) * PageSize) + 1,
+                         (PageIndex * PageSize > TotalCount ? TotalCount : PageIndex * PageSize),
+                         TotalCount
+                         ))
+            </TotalItemsTemplate>
                         </DataGrid>
                                             </div>
                                               <!-- Draggable Resizer -->
@@ -3466,6 +3546,14 @@
                             <PreviousPageButtonTemplate>@L[PikachuResource.PrevPage]</PreviousPageButtonTemplate>
                             <NextPageButtonTemplate>@L[PikachuResource.NextPage]</NextPageButtonTemplate>
                             <LastPageButtonTemplate>@L[PikachuResource.LastPage]</LastPageButtonTemplate>
+                              <TotalItemsTemplate>
+                @(string.Format(
+                         L["Range"],
+                         ((PageIndex - 1) * PageSize) + 1,
+                         (PageIndex * PageSize > TotalCount ? TotalCount : PageIndex * PageSize),
+                         TotalCount
+                         ))
+            </TotalItemsTemplate>
                         </DataGrid>
                                             </div>
                                               <!-- Draggable Resizer -->
@@ -3780,6 +3868,14 @@
                             <PreviousPageButtonTemplate>@L[PikachuResource.PrevPage]</PreviousPageButtonTemplate>
                             <NextPageButtonTemplate>@L[PikachuResource.NextPage]</NextPageButtonTemplate>
                             <LastPageButtonTemplate>@L[PikachuResource.LastPage]</LastPageButtonTemplate>
+                              <TotalItemsTemplate>
+                @(string.Format(
+                         L["Range"],
+                         ((PageIndex - 1) * PageSize) + 1,
+                         (PageIndex * PageSize > TotalCount ? TotalCount : PageIndex * PageSize),
+                         TotalCount
+                         ))
+            </TotalItemsTemplate>
                         </DataGrid>
                                             </div>
                                               <!-- Draggable Resizer -->
