--- a/src/Kooco.Pikachu.Blazor/Pages/Refunds/Refund.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Refunds/Refund.razor
@@ -238,6 +238,14 @@
                 <PreviousPageButtonTemplate>@L[PikachuResource.PrevPage]</PreviousPageButtonTemplate>
                 <NextPageButtonTemplate>@L[PikachuResource.NextPage]</NextPageButtonTemplate>
                 <LastPageButtonTemplate>@L[PikachuResource.LastPage]</LastPageButtonTemplate>
+                  <TotalItemsTemplate>
+                @(string.Format(
+                         L["Range"],
+                         ((PageIndex - 1) * PageSize) + 1,
+                         (PageIndex * PageSize > TotalCount ? TotalCount : PageIndex * PageSize),
+                         TotalCount
+                         ))
+            </TotalItemsTemplate>
             </DataGrid>
         </CardBody>
     </Card>
