--- a/src/Kooco.Pikachu.Blazor/Pages/TenantEmailing/AutomaticEmailing.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/TenantEmailing/AutomaticEmailing.razor
@@ -89,6 +89,14 @@
             <PreviousPageButtonTemplate>@L[PikachuResource.PrevPage]</PreviousPageButtonTemplate>
             <NextPageButtonTemplate>@L[PikachuResource.NextPage]</NextPageButtonTemplate>
             <LastPageButtonTemplate>@L[PikachuResource.LastPage]</LastPageButtonTemplate>
+              <TotalItemsTemplate>
+                @(string.Format(
+                         L["Range"],
+                         ((_pageIndex - 1) * _pageSize) + 1,
+                         (_pageIndex * _pageSize > Total ? Total : _pageIndex * _pageSize),
+                         Total
+                         ))
+            </TotalItemsTemplate>
         </DataGrid>
     </CardBody>
 </Card>
