Commit for Pk-1842

--- a/src/Kooco.Pikachu.Blazor/Pages/ShoppingCredits/ShoppingCreditUseSetting.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ShoppingCredits/ShoppingCreditUseSetting.razor
@@ -170,7 +170,7 @@
                         }
                         <Divider></Divider>
 
-                        <Column ColumnSize="ColumnSize.Is12">
+               @*          <Column ColumnSize="ColumnSize.Is12">
                             <Label>@L["UseableforProducts"]</Label>
 
                             <RadioGroup Orientation="Orientation.Vertical" TValue="string" CheckedValue="CreateUpdateUsage.UsableProductsScope" CheckedValueChanged="OnUsableProductsScopeChanged" Name="Products">
@@ -202,7 +202,7 @@
                                     <ValidationMessage For="() => CreateUpdateUsage!.ProductIds" />
                                 </EditForm>
                             </Column>
-                        }
+                        } *@
                         <Column ColumnSize="ColumnSize.Is12">
                             <Label>@L["ApplicableItems"]</Label>
 
