--- a/src/Kooco.Pikachu.Blazor/Pages/TenantDeliveryFees/TenantDeliveryFee.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/TenantDeliveryFees/TenantDeliveryFee.razor
@@ -14,7 +14,7 @@
 @inject IMessageService MessageService
 @inject IStringLocalizer<PikachuResource> L;
 
- @attribute [Authorize(PikachuPermissions.Feeds.Default)] 
+@attribute [Authorize(PikachuPermissions.Feeds.Default)]
 
 <style>
     /* Logistics Fee Management Custom Styles */
@@ -182,7 +182,7 @@
     /* Responsive Table Wrapper */
     .table-responsive {
         border-radius: 0.375rem;
-        box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+        /* box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24); */
     }
 
     /* Custom Spinner */
@@ -278,7 +278,7 @@
     .breadcrumb-container {
         padding: 12px 24px 8px;
         background-color: #ffffff;
-       /*  border-bottom: 1px solid #e9ecef; */
+        /*  border-bottom: 1px solid #e9ecef; */
     }
 
     .breadcrumb-nav {
@@ -296,10 +296,10 @@
         transition: color 0.2s ease;
     }
 
-    .breadcrumb-link:hover {
-        color: #0056b3;
-        text-decoration: none;
-    }
+        .breadcrumb-link:hover {
+            color: #0056b3;
+            text-decoration: none;
+        }
 
     .breadcrumb-separator {
         margin: 0 8px;
@@ -325,30 +325,27 @@
         line-height: 1.2;
     }
 
-     .input-group-text span.text-muted {
-    display: none !important;
-}
+    .input-group-text span.text-muted {
+        display: none !important;
+    }
 
-    
 </style>
-<PikachuPageHeader 
-    Breadcrumbs="@(new() { L["PlatformManagement"], L["FeeSettings"] })"
-    Title="@L["PlatformFeeSettings"]" />
+<PikachuPageHeader Breadcrumbs="@(new() { L["PlatformManagement"], L["FeeSettings"] })"
+                   Title="@L["PlatformFeeSettings"]" />
 
 <Card>
     <CardBody>
         <Row>
             <Column ColumnSize="ColumnSize.Is12">
-                <TextEdit 
-                    @bind-Text="Filter" 
-                    Placeholder="@L["SearchTenantName"]" 
-                    @onkeypress="OnSearchKeyPress">
+                <TextEdit @bind-Text="Filter"
+                          Placeholder="@L["SearchTenantName"]"
+                          @onkeypress="OnSearchKeyPress">
                     <Feedback>
                         <ValidationNone />
                     </Feedback>
                 </TextEdit>
             </Column>
-           
+
         </Row>
     </CardBody>
 </Card>
@@ -363,63 +360,80 @@
                   PageSize="PageSize"
                   Responsive="true">
             <DataGridColumns>
-                <DataGridColumn TItem="TenantLogisticsFeeRowDto" 
-                               Field="@nameof(TenantLogisticsFeeRowDto.TenantName)" 
-                               Caption="@L["TenantName"]">
+                <DataGridColumn TItem="TenantLogisticsFeeRowDto"
+                                Field="@nameof(TenantLogisticsFeeRowDto.TenantName)"
+                                Caption="@L["TenantName"]">
                     <DisplayTemplate>
-                        
-                            @context.TenantName
-                      
+                        @context.TenantName
                     </DisplayTemplate>
                 </DataGridColumn>
-                
-               
-                
-                <DataGridColumn TItem="TenantLogisticsFeeRowDto" 
-                               Field="@nameof(TenantLogisticsFeeRowDto.LogisticsFeeStatus)" 
-                               Caption="@L["LogisticsFeeStatus"]">
+
+                <DataGridColumn TItem="TenantLogisticsFeeRowDto"
+                                Field="@nameof(TenantLogisticsFeeRowDto.PaymentFeeStatus)"
+                                Caption="@L["PaymentFeeStatus"]"
+                                HeaderTextAlignment="TextAlignment.Center"
+                                Width="20%">
                     <DisplayTemplate>
-                         <PikachuBadge Class="@GetStatusColor(context.LogisticsFeeStatus)">
-                            @L[GetStatusText(context.LogisticsFeeStatus)]
-                        </PikachuBadge>
+                        <Div TextAlignment="TextAlignment.Center">
+                            <PikachuBadge Class="@GetStatusColor(context.PaymentFeeStatus)">
+                                @L[GetStatusText(context.PaymentFeeStatus)]
+                            </PikachuBadge>
+                        </Div>
                     </DisplayTemplate>
                 </DataGridColumn>
-                
-               
-                
-                <DataGridColumn TItem="TenantLogisticsFeeRowDto" 
-                               Field="@nameof(TenantLogisticsFeeRowDto.LastModificationTime)" 
-                               Caption="@L["LastUpdated"]">
+
+                <DataGridColumn TItem="TenantLogisticsFeeRowDto"
+                                Field="@nameof(TenantLogisticsFeeRowDto.LogisticsFeeStatus)"
+                                Caption="@L["LogisticsFeeStatus"]"
+                                HeaderTextAlignment="TextAlignment.Center"
+                                Width="20%">
+                    <DisplayTemplate>
+                        <Div TextAlignment="TextAlignment.Center">
+                            <PikachuBadge Class="@GetStatusColor(context.LogisticsFeeStatus)">
+                                @L[GetStatusText(context.LogisticsFeeStatus)]
+                            </PikachuBadge>
+                        </Div>
+                    </DisplayTemplate>
+                </DataGridColumn>
+
+
+
+                <DataGridColumn TItem="TenantLogisticsFeeRowDto"
+                                Field="@nameof(TenantLogisticsFeeRowDto.LastModificationTime)"
+                                Caption="@L["LastUpdated"]"
+                                Width="20%">
                     <DisplayTemplate>
                         @context.LastModificationTime?.ToString("yyyy-MM-dd HH:mm")
                     </DisplayTemplate>
                 </DataGridColumn>
-                
-                <DataGridColumn TItem="TenantLogisticsFeeRowDto" 
-                               Caption="@L["Actions"]" 
-                               Sortable="false">
+
+                <DataGridColumn TItem="TenantLogisticsFeeRowDto"
+                                Caption="@L["Actions"]"
+                                Sortable="false"
+                                HeaderTextAlignment="TextAlignment.Center"
+                                Width="10%">
                     <DisplayTemplate>
-                        <Button
-                            Color="Color.Info" Outline
-                                Size="Size.Small" 
-                               
-                                @onclick="() => ViewTenantDetails(context.Id)">
-                            @L["Configure"]
-                        </Button>
+                        <Div TextAlignment="TextAlignment.Center">
+                            <Button Color="Color.Info" Outline
+                                    Size="Size.Small"
+                                    @onclick="() => ViewTenantDetails(context.Id)">
+                                @L["Configure"]
+                            </Button>
+                        </Div>
                     </DisplayTemplate>
                 </DataGridColumn>
             </DataGridColumns>
-             <NextPageButtonTemplate>@L["NextPage"]</NextPageButtonTemplate>
-    <PreviousPageButtonTemplate>@L["PrevPage"]</PreviousPageButtonTemplate>
-    <LastPageButtonTemplate>@L["LastPage"]</LastPageButtonTemplate>
-    <FirstPageButtonTemplate>@L["FirstPage"]</FirstPageButtonTemplate>
+            <NextPageButtonTemplate>@L["NextPage"]</NextPageButtonTemplate>
+            <PreviousPageButtonTemplate>@L["PrevPage"]</PreviousPageButtonTemplate>
+            <LastPageButtonTemplate>@L["LastPage"]</LastPageButtonTemplate>
+            <FirstPageButtonTemplate>@L["FirstPage"]</FirstPageButtonTemplate>
             <TotalItemsTemplate>
                 @(string.Format(
-                         L["Range"],
-                         ((CurrentPage - 1) * PageSize) + 1,
-                         (CurrentPage * PageSize > TotalCount ? TotalCount : CurrentPage * PageSize),
-                         TotalCount
-                         ))
+                                L["Range"],
+                                ((CurrentPage - 1) * PageSize) + 1,
+                                (CurrentPage * PageSize > TotalCount ? TotalCount : CurrentPage * PageSize),
+                                TotalCount
+                                ))
             </TotalItemsTemplate>
         </DataGrid>
     </CardBody>
