#PK-1839 Removed permission

--- a/src/Kooco.Pikachu.Blazor/Pages/Reconciliations/EcPayReconciliation.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Reconciliations/EcPayReconciliation.razor
@@ -1,6 +1,6 @@
 ﻿@page "/ecpay/reconciliation"
 @using Kooco.Pikachu.Reconciliations
-@attribute [Authorize(PikachuPermissions.EcPayReconciliations.Default)]
+@* @attribute [Authorize(PikachuPermissions.EcPayReconciliations.Default)] *@
 @inherits PikachuComponentBase
 @inject IEcPayReconciliationAppService EcPayReconciliationAppService
 @inject NavigationManager NavigationManager
