--- a/src/Kooco.Pikachu.Blazor/Pages/VoidInvoices/VoidInvoice.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/VoidInvoices/VoidInvoice.razor
@@ -128,8 +128,8 @@
                 <TotalItemsTemplate>
                     @(string.Format(
                         L["Range"],
-                        ((PageIndex - 1) * PageSize) + 1,
-                        (PageIndex * PageSize > TotalCount ? TotalCount : PageIndex * PageSize),
+                        ((PageIndex) * PageSize) + 1,
+                        ((PageIndex + 1) * PageSize > TotalCount ? TotalCount : (PageIndex + 1) * PageSize),
                         TotalCount
                         ))
                 </TotalItemsTemplate>
