--- a/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/Items.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/Items.razor
@@ -421,12 +421,8 @@
                                                             <NextPageButtonTemplate>@L[PikachuResource.NextPage]</NextPageButtonTemplate>
                                                             <LastPageButtonTemplate>@L[PikachuResource.LastPage]</LastPageButtonTemplate>
                                                               <TotalItemsTemplate>
-                @(string.Format(
-                         L["Range"],
-                         ((PageIndex - 1) * Filters.MaxResultCount) + 1,
-                         (PageIndex * Filters.MaxResultCount > Total ? Total : PageIndex * Filters.MaxResultCount),
-                         Total
-                         ))
+                                                                 
+                @(getTotalItems())
             </TotalItemsTemplate>
                                                         </DataGrid>
         }
