#PK-1822 Payout Details UI

--- a/src/Kooco.Pikachu.Blazor/Pages/TenantPayouts/TCatFileImportModal.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/TenantPayouts/TCatFileImportModal.razor
@@ -1,5 +1,6 @@
 ﻿@using Kooco.Pikachu.CodTradeInfos
 @using Kooco.Pikachu.Extensions
+<link href="/css/tenant-payout.css" rel="stylesheet" />
 
 @inherits PikachuComponentBase
 @inject ITCatCodTradeInfoAppService TCatCodTradeInfoAppService
