--- a/src/Kooco.Pikachu.Blazor/Pages/Orders/Order.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Orders/Order.razor
@@ -664,8 +664,8 @@
   <TotalItemsTemplate>
                @(string.Format(
                          L["Range"],
-                         ((PageIndex - 1) * PageSize) + 1,
-                         (PageIndex * PageSize > TotalCount ? TotalCount : PageIndex * PageSize),
+                         ((PageIndex) * PageSize) + 1,
+                         ((PageIndex+1) * PageSize > TotalCount ? TotalCount : (PageIndex+1) * PageSize),
                          TotalCount
                          ))
             </TotalItemsTemplate>
@@ -915,8 +915,8 @@
                               <TotalItemsTemplate>
                @(string.Format(
                          L["Range"],
-                         ((PageIndex - 1) * PageSize) + 1,
-                         (PageIndex * PageSize > TotalCount ? TotalCount : PageIndex * PageSize),
+                         ((PageIndex) * PageSize) + 1,
+                         ((PageIndex+1) * PageSize > TotalCount ? TotalCount : (PageIndex+1) * PageSize),
                          TotalCount
                          ))
             </TotalItemsTemplate>
@@ -1169,8 +1169,8 @@
                               <TotalItemsTemplate>
                @(string.Format(
                          L["Range"],
-                         ((PageIndex - 1) * PageSize) + 1,
-                         (PageIndex * PageSize > TotalCount ? TotalCount : PageIndex * PageSize),
+                         ((PageIndex) * PageSize) + 1,
+                         ((PageIndex+1) * PageSize > TotalCount ? TotalCount : (PageIndex+1) * PageSize),
                          TotalCount
                          ))
             </TotalItemsTemplate>
@@ -1485,8 +1485,8 @@
                               <TotalItemsTemplate>
                @(string.Format(
                          L["Range"],
-                         ((PageIndex - 1) * PageSize) + 1,
-                         (PageIndex * PageSize > TotalCount ? TotalCount : PageIndex * PageSize),
+                         ((PageIndex) * PageSize) + 1,
+                         ((PageIndex+1) * PageSize > TotalCount ? TotalCount : (PageIndex+1) * PageSize),
                          TotalCount
                          ))
             </TotalItemsTemplate>
@@ -1795,8 +1795,8 @@
                               <TotalItemsTemplate>
                @(string.Format(
                          L["Range"],
-                         ((PageIndex - 1) * PageSize) + 1,
-                         (PageIndex * PageSize > TotalCount ? TotalCount : PageIndex * PageSize),
+                         ((PageIndex) * PageSize) + 1,
+                         ((PageIndex+1) * PageSize > TotalCount ? TotalCount : (PageIndex+1) * PageSize),
                          TotalCount
                          ))
             </TotalItemsTemplate>
@@ -2105,8 +2105,8 @@
                               <TotalItemsTemplate>
                @(string.Format(
                          L["Range"],
-                         ((PageIndex - 1) * PageSize) + 1,
-                         (PageIndex * PageSize > TotalCount ? TotalCount : PageIndex * PageSize),
+                         ((PageIndex) * PageSize) + 1,
+                         ((PageIndex+1) * PageSize > TotalCount ? TotalCount : (PageIndex+1) * PageSize),
                          TotalCount
                          ))
             </TotalItemsTemplate>
@@ -2413,8 +2413,8 @@
                               <TotalItemsTemplate>
                @(string.Format(
                          L["Range"],
-                         ((PageIndex - 1) * PageSize) + 1,
-                         (PageIndex * PageSize > TotalCount ? TotalCount : PageIndex * PageSize),
+                         ((PageIndex) * PageSize) + 1,
+                         ((PageIndex+1) * PageSize > TotalCount ? TotalCount : (PageIndex+1) * PageSize),
                          TotalCount
                          ))
             </TotalItemsTemplate>
@@ -2653,8 +2653,8 @@
                               <TotalItemsTemplate>
                @(string.Format(
                          L["Range"],
-                         ((PageIndex - 1) * PageSize) + 1,
-                         (PageIndex * PageSize > TotalCount ? TotalCount : PageIndex * PageSize),
+                         ((PageIndex) * PageSize) + 1,
+                         ((PageIndex+1) * PageSize > TotalCount ? TotalCount : (PageIndex+1) * PageSize),
                          TotalCount
                          ))
             </TotalItemsTemplate>
@@ -2905,8 +2905,8 @@
                               <TotalItemsTemplate>
                @(string.Format(
                          L["Range"],
-                         ((PageIndex - 1) * PageSize) + 1,
-                         (PageIndex * PageSize > TotalCount ? TotalCount : PageIndex * PageSize),
+                         ((PageIndex) * PageSize) + 1,
+                         ((PageIndex+1) * PageSize > TotalCount ? TotalCount : (PageIndex+1) * PageSize),
                          TotalCount
                          ))
             </TotalItemsTemplate>
@@ -3227,8 +3227,8 @@
                               <TotalItemsTemplate>
                @(string.Format(
                          L["Range"],
-                         ((PageIndex - 1) * PageSize) + 1,
-                         (PageIndex * PageSize > TotalCount ? TotalCount : PageIndex * PageSize),
+                         ((PageIndex) * PageSize) + 1,
+                         ((PageIndex+1) * PageSize > TotalCount ? TotalCount : (PageIndex+1) * PageSize),
                          TotalCount
                          ))
             </TotalItemsTemplate>
@@ -3549,8 +3549,8 @@
                               <TotalItemsTemplate>
                @(string.Format(
                          L["Range"],
-                         ((PageIndex - 1) * PageSize) + 1,
-                         (PageIndex * PageSize > TotalCount ? TotalCount : PageIndex * PageSize),
+                         ((PageIndex) * PageSize) + 1,
+                         ((PageIndex+1) * PageSize > TotalCount ? TotalCount : (PageIndex+1) * PageSize),
                          TotalCount
                          ))
             </TotalItemsTemplate>
@@ -3871,8 +3871,8 @@
                               <TotalItemsTemplate>
                @(string.Format(
                          L["Range"],
-                         ((PageIndex - 1) * PageSize) + 1,
-                         (PageIndex * PageSize > TotalCount ? TotalCount : PageIndex * PageSize),
+                         ((PageIndex) * PageSize) + 1,
+                         ((PageIndex+1) * PageSize > TotalCount ? TotalCount : (PageIndex+1) * PageSize),
                          TotalCount
                          ))
             </TotalItemsTemplate>
